--- a/index.html
+++ b/index.html
@@ -45,23 +45,6 @@
 <script src="https://cdn.jsdelivr.net/npm/js-interpreter@latest/interpreter.js"></script>
 
 <script>
-  const logo = `
-   ____            _               ____                     
-  / ___| ___ _ __ | |_ _   _ ___  / ___|  ___ __ _ _ __     
-  | |   / _ \\ '_ \\| __| | | / __| \\___ \\ / __/ _\` | '_ \\    
-  | |__|  __/ | | | |_| |_| \\__ \\  ___) | (_| (_| | | | |   
-   \\____\\___|_| |_|\\__|\\__,_|___/ |____/ \\___\\__,_|_| |_|   
-
-             Cyber Secrecy Terminal                        
-  `;
-
-
-function showLogo() {
-  print(logo.trim());   // print the logo without leading/trailing blank lines
-  print('');            // add a blank line to separate logo from readme
-  print(files['readme.txt']); // print the readme welcome text
-  prompt();
-}
   const { Terminal } = window;
   const term = new Terminal({
     cursorBlink: true,
@@ -136,21 +119,18 @@ function showLogo() {
     print(`Running ${filename}...`);
 
     const interpreter = new Interpreter(files[filename], function(interpreter, globalObject) {
-      // print(text)
       interpreter.setProperty(globalObject, 'print',
         interpreter.createNativeFunction(function(text) {
           print(String(text));
         })
       );
 
-      // scan()
       interpreter.setProperty(globalObject, 'scan',
         interpreter.createNativeFunction(function() {
           return Object.keys(fakeServers).join('\n');
         })
       );
 
-      // probe(server)
       interpreter.setProperty(globalObject, 'probe',
         interpreter.createNativeFunction(function(server) {
           server = String(server);
@@ -159,7 +139,6 @@ function showLogo() {
         })
       );
 
-      // cameraStatus(server)
       interpreter.setProperty(globalObject, 'cameraStatus',
         interpreter.createNativeFunction(function(server) {
           server = String(server);
@@ -168,7 +147,6 @@ function showLogo() {
         })
       );
 
-      // hack(server)
       interpreter.setProperty(globalObject, 'hack',
         interpreter.createNativeFunction(function(server) {
           server = String(server);
@@ -215,7 +193,6 @@ function showLogo() {
     }
   }
 
-  // SINGLE unified input handler (fixes double typing)
   term.onKey(e => {
     const ev = e.domEvent;
     const printable = !ev.altKey && !ev.ctrlKey && !ev.metaKey;
@@ -253,7 +230,10 @@ function showLogo() {
     scrollBottom();
   });
 
-  showLogo();
+  // Show just the welcome readme text on load
+  print(files['readme.txt']);
+  prompt();
+
 </script>
 </body>
 </html>
